add thanks section

--- a/src/learning_zig/09-conclusion.html
+++ b/src/learning_zig/09-conclusion.html
@@ -23,6 +23,11 @@ permalink: "/learning_zig/conclusion/"
 
 		<p>I hope this resource helps and I hope you have fun programming.</p>
 	</section>
+
+	<section>
+		<h2 tabindex=-1 id=thanks><a href=#thanks aria-hidden=true>Thanks</a></h2>
+		<p>Thank you to all the people who have contributed fixes and suggestion to this series. In particular, thanks to <a href="https://github.com/gonzus">Gonzalo Diethelm</a> for providing a thorough edit.</p>
+	</section>
 </article>
 
 <div class=pager>
