add link to russian translation of learning_zig

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -18,6 +18,7 @@ permalink: "/learning_zig/"
 		<h2 tabindex=-1 id=translations><a href=#translations aria-hidden=true>Translations</a></h2>
 		<ol>
 			<li><a href="https://zigcc.github.io/learning-zig/index.html">Chinese</a> - by Jiacai Liu
+			<li><a href="https://github.com/dee0xeed/learning-zig-rus/blob/main/src/ch01.md">Russian</a> - by dee0xeed
 		</ol>
 	</section>
 
