new post: your website search hurts my feelings

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -19,6 +19,7 @@ permalink: "/learning_zig/"
 		<ol>
 			<li><a href="https://zigcc.github.io/learning-zig/index.html">Chinese</a> - by Jiacai Liu
 			<li><a href="https://github.com/dee0xeed/learning-zig-rus/blob/main/src/ch01.md">Russian</a> - by dee0xeed
+			<li><a href="https://faultnote.github.io/posts/learning-zig/">Korean</a> - by faultnote
 		</ol>
 	</section>
 
