--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -306,13 +306,14 @@ const b = a[1..4];
 
 {% highlight zig %}
 const a = [_]i32{1, 2, 3, 4, 5};
-var end: usize = 4;
+var end: usize = 3;
+end += 1;
 const b = a[1..end];
 {% endhighlight %}
 
 		<p><code>b</code> is now a proper slice, specifically its type is <code>[]const i32</code>. You can see that the length of the slice isn't part of the type, because the length is a runtime property, and types are always fully known at compile time. When creating a slice, we can omit the upper bound to create a slice to the end of whatever we're slicing (either an array or a slice), e.g. <code>const c = b[2..];</code>.</p>
 
-		<aside>If we had declared <code>end</code> as a <code>const</code> then it would have become a compile-time known value, which would have resulted in a compile-time known length for <code>b</code> and thus created a pointer to an array, not a slice. I find this a little confusing, but it isn't something that comes up too often and it isn't too hard to master. I would have loved to skip over it at this point, but couldn't figure out an honest way to avoid this detail.</aside>
+		<aside>If we had done <code>const end: usize = 4</code> without the increment, then <code>1..end</code> would have become a compile-time known length for <code>b</code> and thus created a pointer to an array, not a slice. I find this a little confusing, but it isn't something that comes up too often and it isn't too hard to master. I would have loved to skip over it at this point, but couldn't figure out an honest way to avoid this detail.</aside>
 
 		<p>Learning Zig has taught me that types are very descriptive. It isn't just an integer or a boolean, or even an array of signed 32 bit integers. Types also contain other important pieces of information. We've talked about the length being part of an array's type, and many of the examples have shown how the const-ness is also part of it. For example, in our last example, <code>b</code>'s type is <code>[]const i32</code>. You can see this for yourself with the following code:</p>
 
@@ -322,6 +323,7 @@ const std = @import("std");
 pub fn main() void {
 	const a = [_]i32{1, 2, 3, 4, 5};
 	var end: usize = 4;
+	end += 1;
 	const b = a[1..end];
 	std.debug.print("{any}", .{@TypeOf(b)});
 }
@@ -336,14 +338,15 @@ pub fn main() void {
 var b = a[1..end];
 {% endhighlight %}
 
-	<p>but you'll get the same error, why? As a hint, what's <code>b</code>'s type, or more generically, what is <code>b</code>? A slice is a length and pointer to [part of] an array. A slice's type is always derived from the underlying array. Whether <code>b</code> is declared <code>const</code> or not, the underlying array is of type <code>[5]const i32</code> and so b must be of type <code>[]const i32</code>. If we want to be able to write into <code>b</code>, we need to change <code>a</code> from a <code>const</code> to a <code>var</code>.</p>
+	<p>but you'll get the same error, why? As a hint, what's <code>b</code>'s type, or more generically, what is <code>b</code>? A slice is a length and pointer to [part of] an array. A slice's type is always derived from what it is slicing. Whether <code>b</code> is declared <code>const</code> or not, it is a slice of a <code>[5]const i32</code> and so b must be of type <code>[]const i32</code>. If we want to be able to write into <code>b</code>, we need to change <code>a</code> from a <code>const</code> to a <code>var</code>.</p>
 
 {% highlight zig %}
 const std = @import("std");
 
 pub fn main() void {
 	var a = [_]i32{1, 2, 3, 4, 5};
-	var end: usize = 4;
+	var end: usize = 3;
+	end += 1;
 	const b = a[1..end];
 	b[2] = 99;
 }
@@ -356,7 +359,8 @@ const std = @import("std");
 
 pub fn main() void {
 	var a = [_]i32{1, 2, 3, 4, 5};
-	var end: usize = 4;
+	var end: usize = 3;
+	end += 1;
 	const b = a[1..end];
 	b = b[1..];
 }
