add note on optionally freeing allocations made with FixedBufferAllocator

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -528,6 +528,8 @@ const std = @import("std");
 pub fn main() !void {
 	var buf: [150]u8 = undefined;
 	var fa = std.heap.FixedBufferAllocator.init(&buf);
+
+	// this will free all memory allocate with this allocator
 	defer fa.reset();
 
 	const allocator = fa.allocator();
@@ -537,6 +539,10 @@ pub fn main() !void {
 		.above = true,
 		.last_param = "are options",
 	}, .{.whitespace = .indent_2});
+
+	// We _can_ free this allocation, but since we know that our allocator is
+	// a FixedBufferAllocator, we could simply rely on the above `defer fa.reset()`
+	defer allocator.free(json);
 
 	std.debug.print("{s}\n", .{json});
 }
