accomodate zig changes introducing std.posix

--- a/src/learning_zig/06-heap_memory.html
+++ b/src/learning_zig/06-heap_memory.html
@@ -51,7 +51,7 @@ pub fn main() !void {
 
 fn getRandomCount() !u8 {
 	var seed: u64 = undefined;
-	try std.os.getrandom(std.mem.asBytes(&seed));
+	try std.posix.getrandom(std.mem.asBytes(&seed));
 	var random = std.rand.DefaultPrng.init(seed);
 	return random.random().uintAtMost(u8, 5) + 5;
 }
